--- a/NightBeachInlineStyling.html
+++ b/NightBeachInlineStyling.html
@@ -7,13 +7,13 @@ text-align:left;">
 text-align:left;">
     <meta charset="UTF-8" style="margin: 0 auto 0 auto;
 
-    text-align:left;">>
+    text-align:left;">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" style="margin: 0 auto 0 auto;
 
-    text-align:left;">>
+    text-align:left;">
     <title style="margin: 0 auto 0 auto;
 
-    text-align:left;">>Document</title>
+    text-align:left;">Document</title>
 </head>
 <body style="text-align: center; margin: 0;
 
